# pvr.disptacharr

./: ############## Kodi CRASH LOG ##########.bat  API_AUTHENTICATION_TEST.md  API_MAPPING.md  CATCHUP_RECORDINGS.md  CHANGELOG.md  CMakeLists.txt  DELIVERY.md  DEVELOPMENT.md  IMPLEMENTATION_PROGRESS.json  IMPLEMENTATION_TRACKER.md  PROJECT_STRUCTURE.md  README.md  addon.xml  build.sh  catchupasrecordingsschema.json  changelog.txt  channelchangeplaybackfailurelog.txt  depends.txt  dispatcharr-openapi.json  test_dispatcharr_api.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  release.yml
pvr.dispatcharr/: addon.xml  addon.xml.in
pvr.dispatcharr/resources/: settings.xml
pvr.dispatcharr/resources/language/resource.language.en_gb/: strings.po
pvr.dispatcharr/resources/language/resource.language.pt_pt/: strings.po
pvr.xtreamcodes/: addon.xml.in
pvr.xtreamcodes/resources/: settings.xml
pvr.xtreamcodes/resources/language/resource.language.en_gb/: strings.po
resources/: strings.po
resources/settings/: settings.xml
scripts/: check-syntax.sh
src/: addon.cpp  client.cpp  client.h  dispatcharr_client.cpp  dispatcharr_client.h  xtream_client.cpp  xtream_client.h
